[WEB-367]: SearchComponent - Corrected filters z-index

--- a/src/app/public/features/search/pages/search.component.scss
+++ b/src/app/public/features/search/pages/search.component.scss
@@ -24,7 +24,7 @@ $filters-height: 44px;
     background-color: $white;
     left: 0;
     right: 0;
-    z-index: 100;
+    z-index: 200;
   }
 
   &__ad {
